<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterSortDialogFragment">


    <TextView
        android:id="@+id/filter_businessname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/business_name_label" />

    <EditText
        android:id="@+id/filter_business_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_businessname_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/value_optional"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/filter_exempt_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_business_name_value"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/show_exempt" />

    <TextView
        android:id="@+id/filter_businesstype_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_exempt_checkbox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/business_type_label" />

    <Spinner
        android:id="@+id/filter_businesstype_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_businesstype_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/filter_businesstype_check"
        android:spinnerMode="dropdown" />

    <CheckBox
        android:id="@+id/filter_businesstype_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:layout_below="@id/filter_businesstype_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp" />


    <TextView
        android:id="@+id/filter_authority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_businesstype_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/local_auth_label" />

    <Spinner
        android:id="@+id/filter_authority_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_authority_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/filter_authority_check"
        android:spinnerMode="dropdown" />

    <CheckBox
        android:id="@+id/filter_authority_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:layout_below="@id/filter_authority_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/filter_region_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_authority_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/region_label" />

    <Spinner
        android:id="@+id/filter_region_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_region_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_toStartOf="@+id/filter_authority_check"
        android:spinnerMode="dropdown"
        android:entries="@array/regions"/>

    <CheckBox
        android:id="@+id/filter_region_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:layout_below="@id/filter_region_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/filter_apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_region_spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/apply_filters" />

    <Button
        android:id="@+id/filter_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_apply_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset_filters" />



</RelativeLayout>