<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SearchFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Search"
        app:titleTextColor="#ffffff"
        tools:layout_editor_absoluteX="0dp"
        app:menu="@menu/search_menu"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/search_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/searchdetails_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="8dp"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:id="@+id/searchDetailsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/search_details_label"
                        android:textColor="@color/colorPrimary"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toLeftOf="@id/searchDetailsText"
                        android:background="@color/colorPrimary"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_toRightOf="@id/searchDetailsText"
                        android:background="@color/colorPrimary"
                        />

                </RelativeLayout>

                <TextView
                    android:id="@+id/businessname_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/searchdetails_divider"
                    android:text="@string/business_name_label" />

                <EditText
                    android:id="@+id/businessname_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/businessname_label"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/value_optional" />

                <TextView
                    android:id="@+id/location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/businessname_entry"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/location_label" />

                <CheckBox
                    android:id="@+id/location_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/location_label"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/use_my_location_label" />

                <EditText
                    android:id="@+id/location_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/location_label"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/value_optional"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/radius_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/location_entry"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/search_radius_label"
                    android:visibility="gone" />

                <SeekBar
                    android:id="@+id/radiusBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radius_label"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:max="100"
                    android:progress="25"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/radius_value_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20"
                    android:layout_below="@id/radiusBar"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"/>

                <CheckBox
                    android:id="@+id/search_show_advanced"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/radius_value_label"
                    android:text="@string/search_show_advanced"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp" />

                <RelativeLayout
                    android:id="@+id/search_advanced_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/search_show_advanced">

                    <RelativeLayout
                        android:id="@+id/filter_divider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="15dp">

                        <TextView
                            android:id="@+id/filterText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/search_filters_label"
                            android:textColor="@color/colorPrimary" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16dp"
                            android:layout_toLeftOf="@id/filterText"
                            android:background="@color/colorPrimary" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="16dp"
                            android:layout_toRightOf="@id/filterText"
                            android:background="@color/colorPrimary" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/businesstype_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filter_divider"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/business_type_label"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/business_type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/businesstype_label"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/search_businesstype_check"
                        android:entries="@array/placeholder_any"
                        android:spinnerMode="dialog" />

                    <CheckBox
                        android:id="@+id/search_businesstype_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/businesstype_label"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:text="@string/all" />

                    <TextView
                        android:id="@+id/authority_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/business_type_spinner"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/local_auth_label"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/authority_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/authority_label"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@id/search_authority_check"
                        android:entries="@array/placeholder_any"
                        android:spinnerMode="dialog" />

                    <CheckBox
                        android:id="@+id/search_authority_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/authority_label"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:text="@string/all" />

                    <TextView
                        android:id="@+id/rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/authority_spinner"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/rating_label"
                        android:visibility="visible" />

                    <Spinner
                        android:id="@+id/rating_num_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_label"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:entries="@array/rating_values"
                        android:spinnerMode="dropdown" />

                    <Spinner
                        android:id="@+id/rating_method_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_label"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@+id/search_rating_check"
                        android:layout_toEndOf="@+id/rating_num_spinner"
                        android:entries="@array/rating_methods"
                        android:spinnerMode="dropdown" />


                    <CheckBox
                        android:id="@+id/search_rating_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rating_label"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:text="@string/all" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/sort_divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_below="@id/search_advanced_view"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:id="@+id/sortText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/search_sortdiv_label"
                        android:textColor="@color/colorPrimary"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:layout_toLeftOf="@id/sortText"
                        android:background="@color/colorPrimary"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:layout_toRightOf="@id/sortText"
                        android:background="@color/colorPrimary"
                        />

                </RelativeLayout>

                <TextView
                    android:id="@+id/sortby_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sort_divider"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sort_label"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/sortby_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sortby_label"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:entries="@array/api_sort_methods"
                    android:spinnerMode="dialog" />
            </RelativeLayout>
        </ScrollView>


    </FrameLayout>


</android.support.constraint.ConstraintLayout>